# practice_chapter_3

./: environment.yml  pyproject.toml
src/: tema3_practica.ipynb
