[project]
name = "esic-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonio Tello", email = "atelloengland@gmail.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "category-encoders>=2.9.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "setuptools<70",
    "shap>=0.51.0",
    "ydata-profiling>=4.18.1",
]

[project.scripts]
esic-notebooks = "esic_notebooks:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
